connected global partial to sass styles file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,3 +225,12 @@ html {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+body {
+  font-size: 125%;
+}
+
+.wrapper {
+  max-width: 90%;
+  margin: 0 auto;
+}
