--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,1 +1,5 @@
 @use "./partials/global/setup";
+@use "./partials/global/variables";
+@use "./partials/global/typography";
+@use "./partials/global/global";
+
