Started header and discovery sections

--- a/styles/sass/partials/global/_global.scss
+++ b/styles/sass/partials/global/_global.scss
@@ -6,11 +6,12 @@ body {
 }
 
 .wrapper {
-  max-width: 90%;
+  max-width: 80%;
   margin: 0 auto;
 
 }
 
 html {
   font-family: 'Kumar One', cursive, 'Kumar One Outline', cursive;
+  font-weight: lighter;
 }
