Finshed header, and started gallery

--- a/styles/sass/partials/global/_global.scss
+++ b/styles/sass/partials/global/_global.scss
@@ -15,3 +15,8 @@ html {
   font-family: 'Kumar One', cursive, 'Kumar One Outline', cursive;
   font-weight: lighter;
 }
+
+h1,
+h2 {
+  text-transform: uppercase;
+}
