--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,5 +4,6 @@
 @use "./partials/global/global";
 @use "./partials/home-page/home-header";
 @use "./partials/home-page/home-discover";
+@use "./partials/home-page/home-gallery";
 
 
