started silly section

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,5 +5,6 @@
 @use "./partials/home-page/home-header";
 @use "./partials/home-page/home-discover";
 @use "./partials/home-page/home-gallery";
+@use "./partials/home-page/home-silly";
 
 
