--- a/styles/styles.css
+++ b/styles/styles.css
@@ -351,3 +351,11 @@ header .header-img {
 .gallery-section .gallery-img img {
   width: 300px;
 }
+
+.silly-section .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
