--- a/styles/sass/partials/global/_global.scss
+++ b/styles/sass/partials/global/_global.scss
@@ -20,3 +20,35 @@ h1,
 h2 {
   text-transform: uppercase;
 }
+
+p {
+  font-size: 1rem;
+  letter-spacing: 2px;
+  line-height: 32px;
+  font-family: "Lato";
+}
+
+button {
+  background: variables.$button-color;
+  color: variables.$primary-color;
+  padding: 10px 15px 10px 15px;
+  text-transform: uppercase;
+  font-family: variables.$secondary-header-font;
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+
+.fa:hover {
+  opacity: 0.7;
+}
