--- a/styles/sass/partials/home-page/_home-header.scss
+++ b/styles/sass/partials/home-page/_home-header.scss
@@ -1,15 +1,16 @@
 @use "../global/variables";
 
 
-header {
+.homepage-header {
   background-image: url(../assets/header-home.jpg);
-  background-size: cover;
-  padding-bottom: 700px;
-  // height: 600px;
+  background-size: contain;
+  padding-bottom: 600px;
+  background-repeat: no-repeat;
+  
 
 }
 
-header .wrapper {
+.homepage-header  .wrapper {
   display: flex;
   flex-direction: column;
 }
@@ -22,7 +23,7 @@ h1 {
   
 }
 
-header nav ul {
+.homepage-header nav ul {
   display: flex;
   list-style: none;
   justify-content: flex-end;
