--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,13 +246,44 @@ h2 {
   text-transform: uppercase;
 }
 
-header {
-  background-image: url(../assets/header-home.jpg);
-  background-size: cover;
-  padding-bottom: 700px;
+p {
+  font-size: 1rem;
+  letter-spacing: 2px;
+  line-height: 32px;
+  font-family: "Lato";
 }
 
-header .wrapper {
+button {
+  background: #065635;
+  color: #F5F5F5;
+  padding: 10px 15px 10px 15px;
+  text-transform: uppercase;
+  font-family: "Kumar One, cursive";
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.homepage-header {
+  background-image: url(../assets/header-home.jpg);
+  background-size: contain;
+  padding-bottom: 600px;
+  background-repeat: no-repeat;
+}
+
+.homepage-header .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -269,7 +300,7 @@ h1 {
   padding: 0 0 0 15%;
 }
 
-header nav ul {
+.homepage-header nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -278,15 +309,15 @@ header nav ul {
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
-header nav ul li {
+.homepage-header nav ul li {
   padding: 0 40px 0 40px;
   color: #151514;
 }
-header nav ul li a {
+.homepage-header nav ul li a {
   text-decoration: none;
   color: #151514;
 }
-header nav ul li a:hover, header nav ul li a:focus {
+.homepage-header nav ul li a:hover, .homepage-header nav ul li a:focus {
   border-bottom: 3px solid #F8FB05;
 }
 
@@ -358,4 +389,435 @@ header .header-img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 50px 0 75px 0;
+}
+
+.silly-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+}
+.silly-column .silly-icon img {
+  width: 50px;
+  background: #F8FB05;
+  border-radius: 100%;
+  text-align: center;
+}
+.silly-column .silly-text {
+  padding-left: 20px;
+}
+.silly-column .silly-text p {
+  font-size: 1rem;
+  letter-spacing: 2px;
+  line-height: 32px;
+  font-family: "Lato";
+}
+
+.about-section {
+  background: #EDFDDF;
+}
+.about-section .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 75px 0 50px 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.about-section button {
+  background: #065635;
+  color: #F5F5F5;
+  padding: 10px 15px 10px 15px;
+  text-transform: uppercase;
+  font-family: "Kumar One, cursive";
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+.about-img {
+  width: 50%;
+}
+.about-img img {
+  width: 500px;
+  -webkit-box-shadow: 15px 15px #F8FB05;
+          box-shadow: 15px 15px #F8FB05;
+}
+
+.about-section .img-1 img {
+  position: absolute;
+  left: 0;
+  top: 2350px;
+}
+
+.about-section .img-2 img {
+  position: absolute;
+  right: 0;
+  top: 2825px;
+  -webkit-box-shadow: -15px 15px #F8FB05;
+          box-shadow: -15px 15px #F8FB05;
+}
+
+.about-text {
+  width: 50%;
+}
+
+.background-section {
+  background-image: url(../assets/banner-image.jpg);
+  height: 500px;
+}
+
+.search-section .wrapper {
+  padding: 85px 0 100px 0;
+}
+
+.search-container {
+  text-align: center;
+}
+.search-container button {
+  background: #065635;
+  color: #F5F5F5;
+  padding: 10px 15px 10px 15px;
+  text-transform: uppercase;
+  font-family: "Kumar One, cursive";
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+footer {
+  background: black;
+  text-align: center;
+  color: white;
+}
+footer p {
+  margin: 0;
+}
+
+.contact-header {
+  background-image: url(../assets/contact-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 300px;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.contact-header .header-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contact-header .header-top h2 {
+  font-size: 1.65rem;
+  width: 100px;
+  padding-right: 600px;
+}
+.contact-header h1 {
+  width: 100%;
+  padding: 100px 100px 0 0;
+}
+
+.contact-header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.contact-header nav ul li {
+  padding: 0 40px 0 40px;
+  color: #151514;
+}
+.contact-header nav ul li a {
+  text-decoration: none;
+  color: #151514;
+}
+.contact-header nav ul li a:hover, .contact-header nav ul li a:focus {
+  border-bottom: 3px solid #F8FB05;
+}
+
+.contact-section {
+  background: #EDFDDF;
+  height: 600px;
+}
+.contact-section .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.contact-container {
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  left: 80px;
+  bottom: -250px;
+  -webkit-box-shadow: 15px 15px #F8FB05;
+          box-shadow: 15px 15px #F8FB05;
+}
+.contact-container .contact-container-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 60px;
+}
+.contact-container .contact-username-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-right: 20px;
+}
+.contact-container .contact-username-form input {
+  border: none;
+  border-bottom: 2px solid #065635;
+  width: 400px;
+}
+.contact-container .contact-email-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.contact-container .contact-email-form input {
+  border: none;
+  border-bottom: 2px solid #065635;
+  width: 400px;
+}
+.contact-container .message-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 50px;
+}
+.contact-container .message-container input {
+  border: none;
+  border: 2px solid #065635;
+  width: 88%;
+  height: 300px;
+}
+.contact-container .contact-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 50px;
+}
+.contact-container .contact-button button {
+  width: 89%;
+}
+
+.contact-info-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 30px;
+}
+.contact-info-container .social-links {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: left;
+}
+.contact-info-container ul {
+  list-style: none;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  line-height: 32px;
+  font-family: "Lato";
+  font-weight: bold;
+}
+.contact-info-container p {
+  padding-left: 40px;
+}
+
+.blog-header {
+  background-image: url(../assets/blog-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 300px;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.blog-header .header-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.blog-header .header-top h2 {
+  font-size: 1.65rem;
+  width: 100px;
+  padding-right: 600px;
+}
+.blog-header h1 {
+  width: 100%;
+  padding: 100px 100px 0 0;
+}
+
+.blog-header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.blog-header nav ul li {
+  padding: 0 40px 0 40px;
+  color: #151514;
+}
+.blog-header nav ul li a {
+  text-decoration: none;
+  color: #151514;
+}
+.blog-header nav ul li a:hover, .blog-header nav ul li a:focus {
+  border-bottom: 3px solid #F8FB05;
+}
+
+.blog-section {
+  background: #EDFDDF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.blog-left {
+  background-color: white;
+  width: 66%;
+  -webkit-box-shadow: 8px 0 #F8FB05;
+          box-shadow: 8px 0 #F8FB05;
+  padding-top: 475px;
+  border-bottom: 8px solid #F8FB05;
+}
+.blog-left .blog-left-img img {
+  -webkit-box-shadow: 15px 15px #F8FB05;
+          box-shadow: 15px 15px #F8FB05;
+  position: absolute;
+  left: 0;
+  top: 450px;
+}
+.blog-left .blog-left-text {
+  padding-left: 200px;
+  padding-bottom: 20px;
+  width: 90%;
+}
+
+.blog-right {
+  background: #F8FB05;
+  height: 850px;
+  width: 300px;
+  border-left: 15px solid #F8FB05;
+  margin-top: 150px;
+}
+.blog-right img {
+  width: 300px;
+}
+.blog-right ul {
+  font-family: "Lato";
+}
+
+.comment-section {
+  background: #EDFDDF;
+  padding-top: 50px;
+}
+.comment-section .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.comment-section .wrapper h3 {
+  margin: 0;
+}
+.comment-section .comment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.comment-section .comment img {
+  padding: 25px 20px 20px 0px;
+}
+.comment-section .comment .comment-text {
+  padding-left: 10px;
+}
+.comment-section .blog-name-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.comment-section .blog-name-form input {
+  border: none;
+  border-bottom: 2px solid #065635;
+  width: 400px;
+}
+.comment-section .blog-email-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.comment-section .blog-email-form input {
+  border: none;
+  border-bottom: 2px solid #065635;
+  width: 400px;
+}
+
+.blog-forms-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
