Finished homepage responsive design for tablet

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -15,3 +15,4 @@
 @use "./partials/blog-page/blog-header";
 @use "./partials/blog-page/blog-blog";
 @use "./partials/blog-page/blog-comment";
+@use "./partials/home-page/home-tablet";
