--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,7 +279,7 @@ button {
 .homepage-header {
   background-image: url(../assets/header-home.jpg);
   background-size: contain;
-  padding-bottom: 600px;
+  padding-bottom: 750px;
   background-repeat: no-repeat;
 }
 
@@ -846,4 +846,68 @@ footer p {
 .blog-comment-form input {
   background: #EDFDDF;
   border: none;
+}
+
+@media (max-width: 811px) {
+  .homepage-header {
+    padding-bottom: 300px;
+  }
+  .homepage-header nav ul {
+    font-size: small;
+  }
+  .homepage-header h1 {
+    font-size: 30px;
+    padding: 20px 40px 0 0;
+  }
+  .homepage-header .header-img img {
+    width: 400px;
+  }
+  .homepage-header .header-img {
+    top: 200px;
+  }
+  .discover-img {
+    position: absolute;
+    right: 80px;
+  }
+  .discover-img img {
+    width: 180px;
+  }
+  .discover-text {
+    padding-bottom: 50px;
+  }
+  .discover-text p {
+    display: none;
+  }
+  .gallery-section .gallery-img img {
+    width: 200px;
+  }
+  .silly-text p {
+    display: none;
+  }
+  .silly-column .silly-text {
+    font-size: 15px;
+  }
+  .about-section {
+    padding-bottom: 20px;
+  }
+  .about-section .img-1 img {
+    width: 350px;
+    top: 1380px;
+  }
+  .about-section .img-2 img {
+    width: 350px;
+    top: 1700px;
+  }
+  .about-section .about-text p {
+    display: none;
+  }
+  .about-section .about-text-1 {
+    padding-left: 100px;
+  }
+  .background-section {
+    background-size: auto;
+  }
+  .search-section .search-container p {
+    display: none;
+  }
 }
