Finished contact responsive design for tablet

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -16,3 +16,4 @@
 @use "./partials/blog-page/blog-blog";
 @use "./partials/blog-page/blog-comment";
 @use "./partials/home-page/home-tablet";
+@use "./partials/contact-page/contact-tablet";
