Finished blog responsive tablet design

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -17,3 +17,4 @@
 @use "./partials/blog-page/blog-comment";
 @use "./partials/home-page/home-tablet";
 @use "./partials/contact-page/contact-tablet";
+@use "./partials/blog-page/blog-tablet";
