--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -18,3 +18,4 @@
 @use "./partials/home-page/home-tablet";
 @use "./partials/contact-page/contact-tablet";
 @use "./partials/blog-page/blog-tablet";
+@use "./partials/home-page/home-mobile";
