--- a/styles/sass/partials/home-page/_home-silly.scss
+++ b/styles/sass/partials/home-page/_home-silly.scss
@@ -1,5 +1,9 @@
 @use "../global/variables";
 
+.silly-section {
+    background: variables.$primary-color;
+}
+
 .silly-section .wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -30,4 +34,6 @@
             font-family: "Lato";
         }
     }
+
+    
 }
