Started mobile page for contact but its hard lol

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -19,3 +19,5 @@
 @use "./partials/contact-page/contact-tablet";
 @use "./partials/blog-page/blog-tablet";
 @use "./partials/home-page/home-mobile";
+@use "./partials/contact-page/contact-mobile";
+
