--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -20,4 +20,6 @@
 @use "./partials/blog-page/blog-tablet";
 @use "./partials/home-page/home-mobile";
 @use "./partials/contact-page/contact-mobile";
+@use "./partials/blog-page/blog-mobile";
+
 
