--- a/styles/styles.css
+++ b/styles/styles.css
@@ -579,6 +579,8 @@ footer p {
   bottom: -150px;
   -webkit-box-shadow: 15px 15px #F8FB05;
           box-shadow: 15px 15px #F8FB05;
+  font-family: "Lato";
+  font-size: 15px;
 }
 .contact-container .contact-container-top {
   display: -webkit-box;
@@ -600,6 +602,9 @@ footer p {
   border: none;
   border-bottom: 2px solid #065635;
   width: 400px;
+}
+.contact-container .contact-username-form label {
+  text-align: left;
 }
 .contact-container .contact-email-form {
   display: -webkit-box;
@@ -667,6 +672,9 @@ footer p {
   line-height: 32px;
   font-family: "Lato";
   font-weight: bold;
+}
+.contact-info-container ul li a {
+  color: #065635;
 }
 .contact-info-container p {
   padding-left: 40px;
@@ -934,9 +942,6 @@ body {
     font-size: 15px;
     padding: 0 15px 0 15px;
   }
-  .contact-section {
-    height: 400px;
-  }
   .contact-section .wrapper {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
@@ -965,7 +970,7 @@ body {
     width: 280px;
   }
   .contact-container .contact-container-top .contact-username-form label {
-    text-align: center;
+    text-align: left;
   }
   .contact-container .contact-container-top .contact-email-form {
     padding: 10px 0 0 0;
@@ -974,7 +979,7 @@ body {
     width: 280px;
   }
   .contact-container .contact-container-top .contact-email-form label {
-    text-align: center;
+    text-align: left;
   }
   .contact-container .message-container input {
     height: 100px;
@@ -1110,6 +1115,9 @@ body {
   }
 }
 @media (max-width: 376px) {
+  .contact-section {
+    height: auto;
+  }
   .contact-header {
     background-size: cover;
     background-position: bottom;
@@ -1136,9 +1144,35 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    max-width: 100%;
+    padding: 0;
   }
   .contact-container {
     position: static;
+    border-bottom: 15px solid #F8FB05;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: auto;
+    height: 720px;
+  }
+  .contact-container .message-container input {
+    height: 300px;
+  }
+  .contact-info-container {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  .contact-info-container .social-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contact-info-container ul,
+.contact-info-container p {
+    padding-left: 0;
   }
 }
 @media (max-width: 376px) {
